# voice_chat_v1

./: Cargo.toml
src/: audio.rs  control.rs  main.rs  plan.txt  select.rs
