[package]
name = "voice_chat_v1"
version = "0.1.0"
authors = ["Mader Noob <madernoob@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.1"
text_io = "0.1.8"
num_enum = "0.5.1"
libc = "0.2.81"